<resources>
    <string name="app_name">CrossRoads</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="by_checking_this_box_and_signing_up_you_are_agreeing_to_our_terms_and_conditions_and_privacy_policy">By checking this box and signing up, you are agreeing to our Terms and Conditions and Privacy Policy.</string>
    <string name="register">Register</string>
    <string name="Welcome_back_login">Welcome Back, Please Login</string>
    <string name="Already_user">Already Registered? Sign In Here</string>
    <string name="Not_user">Not Registered? Sign Up Here</string>
    <string name="sign_in">Login</string>
    <string name="Person_Name_Here"> Name</string>
    <string name="Profile_Photo_of_user">Profile Picture</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="create_your_profile">Create Your Profile</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="recover_password">Forgot Password? Recover Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TermsAndConditionsAndPrivacyPolicy">Terms And Conditions and Privacy Policy</string>
    <string name="create_account">Create Account</string>
    <string name="my_bids">My Bids</string>
    <string name="my_complete_jobs">My Complete Jobs</string>
    <string name="submit_button">Submit</string>
    <string name="cancel_button">Cancel</string>
    <string-array name="job_sizes">
        <item>Job Size</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra Large</item>
    </string-array>

    <string-array name="job_types">
        <item>Single Item</item>
        <item>Multiple Items</item>
    </string-array>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="town">Town</string>
    <string name="postcode">Postcode</string>
    <string name="app_priority_use">What Are You Primarily Going To Be Using The App For?</string>
    <string name="advertiser">Advertiser</string>
    <string name="advertiser_lower">advertiser</string>
    <string name="courier">Courier</string>
    <string name="courier_lower">courier</string>
    <string name="upload_profile_image">Upload Profile Image</string>
    <string name="save_profile">Save Profile</string>
    <string name="view_courier_profile">View Courier Profile</string>
    <string name="agreed_fee_users_bid">Agreed Fee: £Users Bid</string>
    <string name="active_bids">Active bids</string>
    <string name="jobname_here">JobName Here</string>
    <string name="jobdescription_here">JobDescription Here</string>
    <string name="signature">Signature</string>
    <string name="clear">Clear</string>
    <string name="job_complete">Job Complete</string>
    <string name="bid_details">Bid Details</string>
    <string name="job">Job:</string>
    <string name="text">text</string>
    <string name="description">Description:</string>
    <string name="job_size">Job Size:</string>
    <string name="job_type">Job Type:</string>
    <string name="textview">TextView</string>
    <string name="bid">Bid</string>
    <string name="edit_bid">Edit Bid</string>
    <string name="current_bid">Current Bid:</string>
    <string name="collection_date">Collection Date:</string>
    <string name="collection_time">Collection Time:</string>
    <string name="collection_from">Collection From:</string>
    <string name="delivery_to">Delivery To:</string>
    <string name="find_a_job">Find A Job</string>
    <string name="single_item">Single Item</string>
    <string name="multiple_items">Multiple Items</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="filter">Filter</string>
    <string name="view_your_bids_now">View Your Bids Now</string>
    <string name="job_details">Job Details</string>
    <string name="make_bid">Make Bid</string>
    <string name="enter_an_address">Enter An Address</string>
    <string name="my_pending_adverts">My Pending Adverts</string>
    <string name="my_active_adverts">My Active Adverts</string>
    <string name="my_completed_adverts">My Completed Adverts</string>
    <string name="my_accepted_jobs">My Accepted Jobs</string>
    <string name="your_bid">Your Bid</string>
    <string name="submit_new_bid">Submit New Bid</string>
    <string name="add_job">Add Job</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="advert_name">Advert Name</string>
    <string name="advert_description">Advert Description</string>
    <string name="map">MAP</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="upload_multiple_images">Upload Multiple Images</string>
    <string name="post_advert">Post Advert</string>
    <string name="save_profile_image">Save Profile Image</string>
    <string name="accept_bid">Accept Bid</string>
    <string name="filename_type">Filename.type</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="accept_bid_confirm">Are You Sure You Want To Accept This Bid?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="bid_accepted">Bid Accepted.</string>
    <string name="ok">OK</string>
    <string name="confirm_location_popup">Is this the location you wish to use?</string>
    <string name="take_picture_with_camera">Take Picture With Camera</string>
    <string name="use_image_from_gallery">Use image from gallery</string>
    <string name="confirm_logout">Are You Sure You Want To Logout?</string>
    <string name="logout">Log Out</string>
    <string name="cancel">Cancel</string>
    <string name="phone_number">Phone Number</string>
    <string name="viewphonenumber">viewPhoneNumber</string>
    <string name="viewaddressone">viewAddressOne</string>
    <string name="viewaddresstwo">viewAddressTwo</string>
    <string name="viewtown">viewTown</string>
    <string name="viewpostcode">viewPostCode</string>
    <string name="use_my_address">Use My Address</string>
    <string name="bid_already_placed">Bid already placed!</string>
    <string name="tag">tag</string>
    <string name="permission_failed">Permission Failed</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="sure_logout">Are you sure you want to Logout?</string>
    <string name="full_name_table">fullName</string>
    <string name="profile_image_table">profileImage</string>
    <string name="courier_id_table">courierId</string>
    <string name="user_email_table">userEmail</string>
    <string name="user_bid_table">userBid</string>
    <string name="job_id">JobId</string>
    <string name="job_key_id">JobKeyId</string>
    <string name="delivery_information">Delivery Information</string>
    <string name="collection_information">Collection Information</string>
    <string name="leave_feedback">Leave Feedback</string>
    <string name="feedback_success">Feedback successfully left</string>
    <string name="job_information">Job Information</string>
    <string name="star_review_table">starReview</string>
    <string name="job_status_table">jobStatus</string>
    <string name="response">response</string>
    <string name="payment_success">Payment Successful</string>
    <string name="close">Close</string>
    <string name="active">active</string>
    <string name="unsuccessful">Unsuccessful!</string>
    <string name="success">Success</string>
    <string name="complete">Complete</string>
    <string name="job_key">Job</string>
    <string name="send_email">Send Email</string>
    <string name="phone_number_table">phoneNumber</string>
    <string name="permission_denied">Permissions Denied</string>
    <string name="no_ratings">No Ratings For User</string>
</resources>



