<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.kitkat.crossroads.Jobs.JobDetailsFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            tools:context="com.kitkat.crossroads.Jobs.JobDetailsActivity">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="#FFFFFF"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bebasneueregular"
                    android:text="@string/bid_details"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    tools:layout_editor_absoluteX="163dp"
                    tools:layout_editor_absoluteY="16dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/viewName"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:background="#FFFFFFFF"
                            android:gravity="center_vertical"
                            android:paddingVertical="10dp"
                            android:text="@string/job"
                            android:textAlignment="viewStart"
                            android:textColor="#FF000000"
                            android:visibility="visible" />

                        <TextView
                            android:id="@+id/textViewJobName1"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:background="#FFFFFFFF"
                            android:gravity="center_vertical"
                            android:paddingLeft="10dp"
                            android:paddingVertical="10dp"
                            android:text="@string/text"
                            android:textColor="#FF000000"

                            android:visibility="visible" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/viewDesc"
                            android:layout_width="110dp"
                            android:layout_height="match_parent"
                            android:background="#FFFFFFFF"
                            android:gravity="center_vertical"
                            android:paddingVertical="10dp"
                            android:text="@string/description"
                            android:textAlignment="viewStart"
                            android:textColor="#FF000000"
                            android:visibility="visible" />

                        <TextView
                            android:id="@+id/textViewJobDescription1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:background="#FFFFFFFF"
                            android:gravity="center_vertical"
                            android:paddingLeft="10dp"
                            android:paddingVertical="10dp"
                            android:text="@string/textview"
                            android:textColor="#FF000000"
                            android:visibility="visible"

                            />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/viewSize"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:background="#FFFFFFFF"
                            android:gravity="center_vertical"
                            android:paddingVertical="10dp"
                            android:text="@string/job_size"
                            android:textAlignment="viewStart"
                            android:textColor="#FF000000"
                            android:visibility="visible" />

                        <TextView
                            android:id="@+id/textViewJobSize1"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:background="#FFFFFFFF"
                            android:gravity="center_vertical"
                            android:paddingLeft="10dp"
                            android:paddingVertical="10dp"
                            android:text="@string/textview"
                            android:textColor="#FF000000"
                            android:visibility="visible" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/viewType"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:background="#FFFFFFFF"
                            android:gravity="center_vertical"
                            android:paddingVertical="10dp"
                            android:text="@string/job_type"
                            android:textAlignment="viewStart"
                            android:textColor="#FF000000"
                            android:visibility="visible" />


                        <TextView
                            android:id="@+id/textViewJobType1"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:background="#FFFFFFFF"
                            android:gravity="center_vertical"
                            android:paddingLeft="10dp"
                            android:paddingVertical="10dp"
                            android:text="@string/textview"
                            android:textColor="#FF000000"
                            android:visibility="visible" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/viewColDate"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:background="#FFFFFFFF"
                            android:gravity="center_vertical"
                            android:paddingVertical="10dp"
                            android:text="@string/collection_date"

                            android:textAlignment="viewStart"
                            android:textColor="#FF000000"
                            android:visibility="visible" />

                        <TextView
                            android:id="@+id/textViewJobColDate1"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:background="#FFFFFFFF"
                            android:gravity="center_vertical"
                            android:paddingLeft="10dp"
                            android:paddingVertical="10dp"
                            android:text="@string/textview"
                            android:textColor="#FF000000"
                            android:visibility="visible" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/viewColTime1"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:background="#FFFFFFFF"
                            android:gravity="center_vertical"
                            android:paddingVertical="10dp"
                            android:text="@string/collection_time"

                            android:textAlignment="viewStart"
                            android:textColor="#FF000000"
                            android:visibility="visible" />

                        <TextView
                            android:id="@+id/textViewJobColTime1"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:background="#FFFFFFFF"
                            android:gravity="center_vertical"
                            android:paddingLeft="10dp"
                            android:paddingVertical="10dp"
                            android:text="@string/textview"
                            android:textColor="#FF000000"
                            android:visibility="visible" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/viewFrom"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:background="#FFFFFFFF"
                            android:gravity="center_vertical"
                            android:paddingVertical="10dp"
                            android:text="@string/collection_from"
                            android:textAlignment="viewStart"

                            android:textColor="#FF000000"
                            android:visibility="visible" />

                        <TextView
                            android:id="@+id/textViewJobFrom1"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:background="#FFFFFFFF"
                            android:gravity="center_vertical"
                            android:paddingLeft="10dp"
                            android:paddingVertical="10dp"
                            android:text="@string/textview"
                            android:textColor="#FF000000"
                            android:visibility="visible" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/viewTo"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:background="#FFFFFFFF"
                            android:gravity="center_vertical"
                            android:paddingVertical="10dp"
                            android:text="@string/delivery_to"
                            android:textAlignment="viewStart"
                            android:textColor="#FF000000"
                            android:visibility="visible" />

                        <TextView
                            android:id="@+id/textViewJobTo1"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:background="#FFFFFFFF"
                            android:gravity="center_vertical"
                            android:paddingLeft="10dp"
                            android:paddingVertical="10dp"
                            android:text="@string/textview"
                            android:textColor="#FF000000"
                            android:visibility="visible" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/viewCurrentBid"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:background="#FFFFFFFF"
                            android:gravity="center_vertical"
                            android:paddingVertical="10dp"
                            android:text="@string/current_bid"
                            android:textAlignment="viewStart"
                            android:textColor="#FF000000"
                            android:visibility="visible" />

                        <TextView
                            android:id="@+id/textViewCurrentBid1"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:background="#FFFFFFFF"
                            android:gravity="center_vertical"
                            android:paddingLeft="10dp"
                            android:paddingVertical="10dp"
                            android:text="@string/text"
                            android:textColor="#FF000000"

                            android:visibility="visible" />
                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextBid"
                        android:layout_width="225dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:ems="10"
                        android:hint="@string/bid"
                        android:inputType="number"
                        app:layout_constraintTop_toBottomOf="@+id/textViewJobTo1"
                        tools:layout_editor_absoluteX="84dp" />

                    <Button
                        android:id="@+id/buttonBid"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/edit_bid"
                        app:layout_constraintTop_toBottomOf="@+id/editTextBid"
                        tools:layout_editor_absoluteX="148dp" />
                </LinearLayout>


            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</FrameLayout>
